--- a/kubernetes-manifests/backend/deployment.yaml
+++ b/kubernetes-manifests/backend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: api
-        image: 020403791109.dkr.ecr.us-west-2.amazonaws.com/backend:latest
+        image: 020403791109.dkr.ecr.us-west-2.amazonaws.com/backend:10
         imagePullPolicy: Always
         env:
           - name: POSTGRES_CONN_STR
